# hddtest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README  about.cpp  about.h  about.ui  create_udisks_bindings.sh  definitions.cpp  definitions.h  device.cpp  device.h  file.cpp  file.h  filerw.cpp  filerw.h  filestructure.cpp  filestructure.h  filrerw.h  hddtest.cpp  hddtest.h  hddtest.pro  hddtest.pro.user.1.3  hddtest.ui  main.cpp  org.freedesktop.UDisks.Device.xml  org.freedesktop.UDisks.xml  qrc_logo.cpp  randomgenerator.cpp  randomgenerator.h  readblock.cpp  readblock.h  readcont.cpp  readcont.h  readrnd.cpp  readrnd.h  resource.qrc  seeker.cpp  (+15 more)
reference/: AData8GBSD-2.hddtest  AData8GBSD.hddtest  Crucia MX100 256G.hddtest  KingMax 8G USB2.0.hddtest  Kingson 2GB DT Mini Fun.hddtest  Kingston 4GB CF.hddtest  Kingston DT Micro 16GB.hddtest  Kingston DTSE9 16GB.hddtest  Kingston V100+ 96GB.hddtest  MicroSD 8G.hddtest  Patriot Flex 16GB.hddtest  Samsung SSD 850.hddtest  TOSHIBA MK1652GSX.hddtest
results/: KingMax 8G USB2(EXT4).xml  KingMax 8G USB2(FAT).xml  KingMax 8G USB2(NTFS).xml  KingMax 8G USB2(exFAT).xml  MicroSD08G(try2).xml  TOSHIBA MK1652GSX(btrfs on swap).xml  TOSHIBA MK1652GSX(liveUSB-noHWcache).xml  TOSHIBA MK1652GSX.xml  test.hddtest  test.hdtest  test2.hddtest  test3.hddtest
